# deckgen

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
deckgen/: __init__.py  cli.py
deckgen/core/: __init__.py  analyzer.py  designer.py  image_generator.py  orchestrator.py  renderer.py
deckgen/templates/: navigation.js
deckgen/themes/: keynote_minimalist.yaml  technical_blueprint.yaml
docs/: README.md
docs/01-vision/: VISION.md
docs/02-requirements/epics/: EPIC-01-core-generation.md  EPIC-02-enhanced-content.md  README.md
